--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -20,7 +20,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 		<div class="container">
         <div class="navbar-header">
-             <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-th"></span> WebSiteName</a>
+             <a class="navbar-brand" href="index.html"><span class="glyphicon glyphicon-th"></span> WebSiteName</a>
              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse-1">
              <span class="sr-only">Toggle navigation</span>
              <span class="icon-bar"></span>
