--- a/assignment-1/index.html
+++ b/assignment-1/index.html
@@ -3,16 +3,17 @@
 <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <link rel="shortcut icon" href="logo.png">
+      <link rel="shortcut icon" href="logo.png">
+      <title>Search files...</title>
 	  
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	  
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-	  <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+      <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	  
-	  <link rel="stylesheet" type="text/css" href="Style.css">
+      <link rel="stylesheet" type="text/css" href="Style.css">
 	  
 </head>
 <body>
